--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
+    "sequelize-replace-enum-postgres": "^1.6.0",
     "socket.io": "^4.1.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
