--- a/server/.env
+++ b/server/.env
@@ -4,6 +4,10 @@ ACCESS_TOKEN_TIME=1h
 REFRESH_TOKEN_TIME=30d
 MAX_DEVICE_AMOUNT=5
 SALT_ROUNDS=6
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=dev.str.88@gmail.com
+SMTP_PASS=291087pp
 SQUADHELP_BANK_NUMBER=4564654564564564
 SQUADHELP_BANK_NAME=SquadHelp
 SQUADHELP_BANK_CVC=453
