--- a/server/.env-example
+++ b/server/.env-example
@@ -1,13 +1,13 @@
-ACCESS_TOKEN_SECRET=asdasdasd4as5d4as8d7a8sd4as65d4a8sd7asd4as56d4
-REFRESH_TOKEN_SECRET=rtrbevjer0i9cujvfi0ouvgio0uter0iug0uwe084ur8ufe
+ACCESS_TOKEN_SECRET=exampled_access_token_
+REFRESH_TOKEN_SECRET=exampled_refresh_token_
 ACCESS_TOKEN_TIME=1h
 REFRESH_TOKEN_TIME=30d
 MAX_DEVICE_AMOUNT=5
 SALT_ROUNDS=6
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=dev.str.88@gmail.com
-SMTP_PASS=291087pp
+SMTP_USER=example@example.com
+SMTP_PASS=password
 SQUADHELP_BANK_NUMBER=4564654564564564
 SQUADHELP_BANK_NAME=SquadHelp
 SQUADHELP_BANK_CVC=453
