add APP_NAME to constants

--- a/server/.env-example
+++ b/server/.env-example
@@ -1,3 +1,4 @@
+APP_NAME=Exam-Project
 ACCESS_TOKEN_SECRET=exampled_access_token_
 REFRESH_TOKEN_SECRET=exampled_refresh_token_
 ACCESS_TOKEN_TIME=1h
