--- a/server/.env-example
+++ b/server/.env-example
@@ -1,8 +1,11 @@
 APP_NAME=Exam-Project
-ACCESS_TOKEN_SECRET=exampled_access_token_
-REFRESH_TOKEN_SECRET=exampled_refresh_token_
+APP_URL=http://localhost:5000/
+ACCESS_TOKEN_SECRET=exampled_access_token
+REFRESH_TOKEN_SECRET=exampled_refresh_token
+RESET_TOKEN_SECRET=reset_token_secret
 ACCESS_TOKEN_TIME=1h
 REFRESH_TOKEN_TIME=30d
+RESET_TOKEN_TIME=1h
 MAX_DEVICE_AMOUNT=5
 SALT_ROUNDS=6
 SMTP_HOST=smtp.gmail.com
