--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.1",
     "card-validator": "^8.1.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
@@ -14,6 +15,7 @@
     "moment": "^2.29.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-confirm": "^0.1.23",
     "react-confirm-alert": "^2.7.0",
     "react-credit-cards": "^0.8.3",
